<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PinkStyle"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_age"
        android:hint="@string/hint_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_job"
        android:hint="@string/hint_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_pdtext"
        android:hint="@string/human_hint_pd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:inputType="textMultiLine" />
    
    <EditText
        android:id="@+id/et_text"
        android:hint="@string/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/dialog_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>