<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PinkStyle"
    android:orientation="vertical" >
    

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jisik_name"
        android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/et_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jisik_text1"
        android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/et_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jisik_text2"
        android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/et_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jisik_text3"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_make" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>