<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PinkStyle"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/et_sing_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_sing_num"
        android:maxLength="5"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/et_sing_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_sing_singer"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/et_sing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_sing_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_first_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_sing_first"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/et_second_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_sing_second"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_make" />
    
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>