<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/et_name"
        android:hint="@string/poke_hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/et_lv"
        android:hint="@string/poke_hint_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

        
      <EditText
        android:id="@+id/et_skill"
        android:hint="@string/poke_hint_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/dialog_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>