<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/hint_lol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />    

    <Button
        android:id="@+id/btn_ok"
        android:text="@string/dialog_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>